--- a/public/index.html
+++ b/public/index.html
@@ -50,22 +50,22 @@
       flex-direction: column;
       justify-content: space-between;
       height: 100%;
-      padding: 4vw;
-      gap: 4vw;
+      padding: 3vw;
+      gap: 3vw;
     }
 
     .grid {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
-      gap: 4vw;
+      gap: 3vw;
       flex-grow: 1;
     }
 
     .block {
-      flex: 1 1 calc(50% - 2vw);
-      max-width: calc(50% - 2vw);
-      height: calc(50% - 2vw);
+      flex: 1 1 calc(50% - 1.5vw);
+      max-width: calc(50% - 1.5vw);
+      height: calc(50% - 1.5vw);
       border-radius: 16px;
       color: white;
       font-weight: 600;
@@ -93,7 +93,7 @@
 
       .block {
         flex: 1;
-        height: 68vh;
+        height: 70vh;
         max-width: 100%;
       }
     }
@@ -122,7 +122,7 @@
     }
 
     .trigguiletras {
-      height: 14px;
+      height: 18px;
       object-fit: contain;
     }
 
@@ -214,9 +214,9 @@
     const frases = [
       "📖 Este párrafo era invisible… hasta que lo leíste.",
       "🧠 Cada palabra se acomoda distinto en tu mente.",
-      "👂 A veces, lo más fuerte es lo que no suena.",
-      "✍️ ¿Estás leyendo… o está leyendo algo en ti?",
-      "🔓 Abriste una página, abriste una posibilidad."
+      "👂 Lo que lees en voz baja cambia tu ritmo.",
+      "✍️ ¿Estás leyendo… o estás recordando?",
+      "🔓 Leer es desbloquear una emoción antigua."
     ];
 
     leeBlock.addEventListener('click', function () {
